--- a/app/assets/stylesheets/phones.scss
+++ b/app/assets/stylesheets/phones.scss
@@ -16,7 +16,7 @@ footer {
   padding: 30px 0;
 }
 .jumbotron {
-  background: url(../img/bg-goodssolutions.jpg) no-repeat 50% 50%;
+  background: url(../assets/bg-goodssolutions.jpg) no-repeat 50% 50%;
   background-size: cover;
   text-shadow: 0 1px 3px rgba(255,255,255,.8);
   color: rgba(0,1,0,.9);
