--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -6,7 +6,7 @@
 		<div class="jumbotron text-center">
 			<h1>Phonecat App</h1>
 		</div>
-		<a class="btn btn-primary" href="#/new">Добавить товар</a>
+		<a class="btn btn-success" href="#/new">Добавить товар</a>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-lg-4 item" ng-repeat="phone in phones | filter: search">
 				<div class="phone-box">
