Исправила добавление телефонов

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
-<body ng-controller="PhoneListCtrl">
+<body >
 
 <nav class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
