--- a/public/templates/_form.html
+++ b/public/templates/_form.html
@@ -8,7 +8,7 @@
 <div class="form-group" ng-class="{'has-error' : submitted && phoneForm.description.$invalid}">
     <label class="control-label col-md-3">Описание товара <span class="required">* </span> </label>
     <div class="col-md-4">
-        <input type="text" name="description" class="form-control" ng-model="phoneForm.description" required placeholder="описание"/>
+        <input type="text" name="description" class="form-control" ng-model="phone.description" required placeholder="описание"/>
     </div>
     <p ng-show=" submitted && phoneForm.description.$invalid" class="help-block">Данное поле обязательно для заполнения</p>
 </div>
