--- a/public/templates/_form.html
+++ b/public/templates/_form.html
@@ -8,11 +8,16 @@
 <div class="form-group" ng-class="{'has-error' : submitted && phoneForm.description.$invalid}">
     <label class="control-label col-md-3">Описание товара <span class="required">* </span> </label>
     <div class="col-md-4">
-        <input type="text" name="description" class="form-control" ng-model="phone.description" required placeholder="описание"/>
+        <textarea type="text" name="description" class="form-control" ng-model="phone.description" rows="7" required placeholder="описание"></textarea>
     </div>
     <p ng-show=" submitted && phoneForm.description.$invalid" class="help-block">Данное поле обязательно для заполнения</p>
 </div>
-
+<div class="form-group">
+    <label class="control-label col-md-2">Характеристики товара</label>
+    <div class="col-md-3">
+        <textarea type="text" class="form-control" ng-model="details.characteristic" placeholder="Характеристики товара"></textarea>
+    </div>    
+</div>
 <div class="form-group">
     <div class="pull-left">
         <a class="btn btn-default" href="/"> Назад</a>
