--- a/public/templates/_form.html
+++ b/public/templates/_form.html
@@ -15,7 +15,7 @@
 <div class="form-group">
     <label class="control-label col-md-2">Характеристики товара</label>
     <div class="col-md-3">
-        <textarea type="text" class="form-control" ng-model="details.characteristic" placeholder="Характеристики товара"></textarea>
+        <textarea type="text" class="form-control" ng-model="phone.detail.characteristic" placeholder="Характеристики товара"></textarea>
     </div>    
 </div>
 <div class="form-group">
