--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -10,7 +10,9 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-lg-4 item" ng-repeat="phone in phones | filter: search">
 				<div class="phone-box">
-					<i class="fa fa-times"></i>
+					<a href="" ng-click="deletePhone(phone.id)">
+						<i class="fa fa-times"></i>
+					</a>
 					<div class="preview-img text-center">
 						<!-- <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"/>
 	            <span class="label"
