--- a/public/templates/phone-detail.html
+++ b/public/templates/phone-detail.html
@@ -13,5 +13,5 @@
     <h1>{{phone.name}}</h1>
     <p>{{phone.description}}</p>
     <hr>
-    <p>{{phone.characteristic}}</p>    
+    <p>{{phone.detail.characteristic}}</p>    
 </div>
