--- a/public/templates/_form.html
+++ b/public/templates/_form.html
@@ -12,14 +12,15 @@
     </div>
     <p ng-show=" submitted && phoneForm.description.$invalid" class="help-block">Данное поле обязательно для заполнения</p>
 </div>
-<div class="form-group">
-    <label class="control-label col-md-2">Характеристики товара</label>
-    <div class="col-md-3">
-        <textarea type="text" class="form-control" ng-model="phone.detail.characteristic" placeholder="Характеристики товара"></textarea>
-    </div>    
+<div class="form-group" ng-class="{'has-error' : submitted && phoneForm.characteristic.$invalid}">
+    <label class="control-label col-md-3">Характеристики товара <span class="required">* </span> </label>
+    <div class="col-md-4">
+        <textarea type="text" name="characteristic" class="form-control" ng-model="phone.detail.characteristic" rows="7" required placeholder="Характеристики товара"></textarea>
+    </div> 
+    <p ng-show=" submitted && phoneForm.characteristic.$invalid" class="help-block">Данное поле обязательно для заполнения</p>   
 </div>
 <div class="form-group">
-    <div class="pull-left">
+    <div class="text-center">
         <a class="btn btn-default" href="/"> Назад</a>
         <button type="submit" class="btn btn-primary" ng-click="submitted=true">Создать</button>
     </div>
