--- a/public/templates/phone-detail.html
+++ b/public/templates/phone-detail.html
@@ -10,8 +10,8 @@
     </ul>
   </div>
   <div class="col-xs-12 col-sm-8">
-    <h1>{{phone.name}}</h1>
-    <p>{{phone.description}}</p>
+    <h1>{{phones.phones.name}}</h1>
+    <p>{{phones.phones.description}}</p>
     <hr>
-    <p>{{phone.detail.characteristic}}</p>    
+    <p>{{phones.phones.detail.characteristic}}</p>    
 </div>
