--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -9,10 +9,7 @@
 		<a class="btn btn-success" href="#/phones/new">Добавить товар</a>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-lg-4 item" ng-repeat="phone in phones.phones | filter: search">
-				<div class="phone-box">
-					<a href=""  just-remove ng-click="justRemove(phone)">
-						<i class="fa fa-times" ></i>
-					</a>
+				<div id="phone-box" class="phone-box" just-remove>					
 		<!-- 			<div class="preview-img text-center">
 						<img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"/>
 	            <span class="label"
