--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -9,7 +9,8 @@
 		<a class="btn btn-success" href="#/phones/new">Добавить товар</a>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-lg-4 item" ng-repeat="phone in phones.phones | filter: search">
-				<div id="phone-box" class="phone-box" just-remove>					
+
+				<div id="phone-box" class="phone-box" >			
 		<!-- 			<div class="preview-img text-center">
 						<img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"/>
 	            <span class="label"
