Добавление удаление через директиву

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -10,7 +10,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-lg-4 item" ng-repeat="phone in phones.phones | filter: search">
 
-				<div id="phone-box" class="phone-box" >			
+				<div id="phone-box" class="phone-box" just-remove>
 		<!-- 			<div class="preview-img text-center">
 						<img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"/>
 	            <span class="label"
