--- a/public/templates/new.html
+++ b/public/templates/new.html
@@ -1,9 +1,11 @@
 <div class="col-md-12 text-center">
-    <form class="tab-pane active form-horizontal" id="first" name="phoneForm" novalidate ng-submit="save()">
-	    <div class="col-md-10 text-center">
-        <h3 class="block">Добавление нового товара</h3>
-        <br>
-      </div>
-        <div ng-include src="'/templates/_form.html'"></div>
-    </form>
+	<div class="row">
+		<div class="col-md-10 text-center">
+			<h3 class="block">Добавление нового товара</h3>
+			<br>
+	  </div>
+	</div>
+  <form class="tab-pane active form-horizontal" id="first" name="phoneForm" novalidate ng-submit="save()">
+	  <div ng-include src="'/templates/_form.html'"></div>
+  </form>
 </div> 
