--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -11,14 +11,14 @@
 			<div class="col-xs-12 col-sm-6 col-lg-4 item" ng-repeat="phone in phones.phones | filter: search">
 
 				<div id="phone-box" class="phone-box" just-remove>
-		<!-- 			<div class="preview-img text-center">
-						<img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"/>
+					<!-- <div class="preview-img text-center"> -->
+						<!-- <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"/> -->
 	            <span class="label"
 										ng-init="status = phone.status ? 'Есть в наличии' : 'Под заказ'"
 										ng-class="{'label-success':phone.status, 'label-warning': !phone.status}">
 	              {{status}}
 	            </span>
-					</div> -->
+					<!-- </div> -->
 					<div class="preview-img text-center">
 						<img src="/assets/phones/dell-streak-7.0.jpg" alt="{{phone.name}}"/>
 					</div>
