--- a/public/templates/phone-detail.html
+++ b/public/templates/phone-detail.html
@@ -13,5 +13,6 @@
     <h1>{{phones.phone.name}}</h1>
     <p>{{phones.phone.description}}</p>
     <hr>
-    <p>{{phones.phone.detail.characteristic}}</p>    
+    <p>{{phones.phone.detail.characteristic}}</p>
+    <p>{{phones.phone.status}}</p>    
 </div>
