--- a/public/templates/_form.html
+++ b/public/templates/_form.html
@@ -20,7 +20,13 @@
     <p ng-show=" submitted && phoneForm.characteristic.$invalid" class="help-block">Данное поле обязательно для заполнения</p>   
 </div>
 <div class="form-group">
-    <div class="text-center">
+    <label class="control-label col-md-3">Наличие товара <span class="required">* </span></label>
+    <div class="col-md-3">
+        <input type="checkbox" name="status" ng-model="phone.status" />
+    </div>
+</div>
+<div class="form-group">
+    <div class="col-md-8">
         <a class="btn btn-default" href="/"> Назад</a>
         <button type="submit" class="btn btn-primary" ng-click="submitted=true">Создать</button>
     </div>
