--- a/public/templates/_form.html
+++ b/public/templates/_form.html
@@ -27,7 +27,7 @@
 </div>
 <div class="form-group">
     <div class="col-md-8">
-        <a class="btn btn-default" href="/"> Назад</a>
+        <a class="btn btn-default" href="/#/"> Назад</a>
         <button type="submit" class="btn btn-primary" ng-click="submitted=true">Создать</button>
     </div>
 </div>
