Добавила промисы в detail

--- a/public/templates/phone-detail.html
+++ b/public/templates/phone-detail.html
@@ -10,9 +10,9 @@
     </ul>
   </div>
   <div class="col-xs-12 col-sm-8">
-    <h1>{{phones.phone.name}}</h1>
-    <p>Описание: {{phones.phone.description}}</p>
+    <h1>{{phones.name}}</h1>
+    <p>Описание: {{phones.description}}</p>
     <hr>
-    <p>Характеристики: {{phones.phone.detail.characteristic}}</p>
-    <p>Наличие: {{phones.phone.status ? 'есть в наличии' : 'под заказ'}}</p>    
+    <p>Характеристики: {{phones.detail.characteristic}}</p>
+    <p>Наличие: {{phones.status ? 'есть в наличии' : 'под заказ'}}</p>    
 </div>
