--- a/public/templates/edit.html
+++ b/public/templates/edit.html
@@ -9,28 +9,28 @@
     <div class="form-group" ng-class="{'has-error' : submitted && phoneForm.name.$invalid}">
     <label class="control-label col-md-3">Название <span class="required">* </span> </label>
     <div class="col-md-4">
-      <input type="text" name="name" class="form-control" ng-model="phones.name" required placeholder="название товара"/>
+      <input type="text" name="name" class="form-control" ng-model="phone.name" required placeholder="название товара"/>
     </div>
     <p ng-show=" submitted && phoneForm.name.$invalid" class="help-block">Данное поле обязательно для заполнения</p>
 		</div>
 		<div class="form-group" ng-class="{'has-error' : submitted && phoneForm.description.$invalid}">
 		  <label class="control-label col-md-3">Описание товара <span class="required">* </span> </label>
 		  <div class="col-md-4">
-		    <textarea type="text" name="description" class="form-control" ng-model="phones.description" rows="7" required placeholder="описание"></textarea>
+		    <textarea type="text" name="description" class="form-control" ng-model="phone.description" rows="7" required placeholder="описание"></textarea>
 		  </div>
 		  <p ng-show=" submitted && phoneForm.description.$invalid" class="help-block">Данное поле обязательно для заполнения</p>
 		</div>
 		<div class="form-group" ng-class="{'has-error' : submitted && phoneForm.characteristic.$invalid}">
 		  <label class="control-label col-md-3">Характеристики товара <span class="required">* </span> </label>
 		  <div class="col-md-4">
-		    <textarea type="text" name="characteristic" class="form-control" ng-model="phones.detail.characteristic" rows="7" required placeholder="Характеристики товара"></textarea>
+		    <textarea type="text" name="characteristic" class="form-control" ng-model="phone.detail.characteristic" rows="7" required placeholder="Характеристики товара"></textarea>
 		  </div> 
 		  <p ng-show=" submitted && phoneForm.characteristic.$invalid" class="help-block">Данное поле обязательно для заполнения</p>   
 		</div>
 		<div class="form-group">
 		  <label class="control-label col-md-3">Наличие товара <span class="required">* </span></label>
 		  <div class="col-md-3">
-		    <input type="checkbox" name="status" ng-model="phones.status" />
+		    <input type="checkbox" name="status" ng-model="phone.status" />
 		  </div>
 		</div>
 		<div class="form-group">
