--- a/app/assets/stylesheets/phones.scss
+++ b/app/assets/stylesheets/phones.scss
@@ -157,3 +157,12 @@ input[type=checkbox]
   top: 6px;
   left: 18px;     
 }
+.btn-dropdown{
+  margin-bottom: 0;
+  padding: 1px 5px;
+}
+.dropdown-list > li > a{
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+}
