--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -6,23 +6,26 @@
 		<div class="jumbotron text-center">
 			<h1>Phonecat App</h1>
 		</div>
-		<a class="btn btn-success" href="#/phones/new">Добавить товар</a>		
+		<a class="btn btn-success" href="/phones/new">Добавить товар</a>		
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-lg-4 item" ng-repeat="phone in phones.phones | filter: search">
 				<div id="phone-box" class="phone-box" just-remove>
-					<a href="#/phones/edit/{{phone.id}}"><i class="fa fa-pencil"></i></a>
+					<a href="/phones/edit/{{phone.id}}"><i class="fa fa-pencil"></i></a>
 					<!-- <div class="preview-img text-center"> -->
 						<!-- <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"/> -->
-	            <span class="label" ng-class="{'label-success':phone.status, 'label-warning': !phone.status}">
-					  		{{phone.status ? 'В наличии' : 'Под заказ' }}
-	            </span>
+	            <div class="btn-group">
+            		<button class="btn btn-sm dropdown-toggle btn-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-class="{'btn-success':phone.status, 'btn-warning': !phone.status}" >{{phone.status ? 'В наличии' : 'Под заказ'}} </button>
+            		<ul class="dropdown-menu dropdown-list">
+                  <li><a href="#" class="dropdown-a">{{!phone.status ? 'В наличии' : 'Под заказ'}}</a></li>
+            		</ul>
+        			</div>
 					<!-- </div> -->
 					<div class="preview-img text-center">
 						<img src="/assets/phones/dell-streak-7.0.jpg" alt="{{phone.name}}"/>
 					</div>
 						<h2>{{phone.name}}</h2>
 						<p>{{phone.description}}</p>					
-					<p><a class="btn btn-default" href="#/phones/{{phone.id}}" role="button">View details &raquo;</a></p>
+					<p><a class="btn btn-default" href="/phones/{{phone.id}}" role="button">View details &raquo;</a></p>
 				</div>				
 			</div>
 		</div>
