--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -11,14 +11,16 @@
 			<div class="col-xs-12 col-sm-6 col-lg-4 item" ng-repeat="phone in phones.phones | filter: search">
 				<div id="phone-box" class="phone-box" just-remove>
 					<a href="/phones/edit/{{phone.id}}"><i class="fa fa-pencil"></i></a>
-					<!-- <div class="preview-img text-center"> -->
-						<!-- <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"/> -->
-	            <div class="btn-group">
-            		<button class="btn btn-sm dropdown-toggle btn-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-class="{'btn-success':phone.status, 'btn-warning': !phone.status}" >{{phone.status ? 'В наличии' : 'Под заказ'}} </button>
-            		<ul class="dropdown-menu dropdown-list">
-                  <li><a href="#" class="dropdown-a">{{!phone.status ? 'В наличии' : 'Под заказ'}}</a></li>
-            		</ul>
-        			</div>
+					 <div class="preview-img text-center">
+						 <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"/>
+					<select ng-model="phone.status"
+							ng-change="update(phone)"
+							ng-options="phoneStatusOptions(status) for status in [true, false]"></select>
+
+
+
+
+
 					<!-- </div> -->
 					<div class="preview-img text-center">
 						<img src="/assets/phones/dell-streak-7.0.jpg" alt="{{phone.name}}"/>
