--- a/public/templates/_form.html
+++ b/public/templates/_form.html
@@ -25,6 +25,24 @@
         <input type="checkbox" name="status" ng-model="phone.status" />
     </div>
 </div>
+
+<div class="form-group">
+    <input type="file" nv-file-select uploader="uploader" multiple  /><br/>
+    <ul>
+        <li ng-repeat="item in uploader.queue">
+            Name: <span  ng-bind="item.file.name"></span><br/>
+            <button ng-click="item.upload()">upload</button>
+        </li>
+    </ul>
+
+<!--<button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">-->
+    <!--<span class="glyphicon glyphicon-upload"></span> Upload-->
+
+
+    <!--<button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">-->
+        <!--<span class="glyphicon glyphicon-upload"></span> Upload all-->
+</div>
+
 <div class="form-group">
     <div class="col-md-8">
         <a class="btn btn-default" href="/"> Назад</a>
