--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -12,11 +12,12 @@
 				<div id="phone-box" class="phone-box" just-remove>
 					<a href="/phones/edit/{{phone.id}}"><i class="fa fa-pencil"></i></a>
 					 <div class="preview-img text-center">
-						 <img ng-src="{{phone.attachments.first.file.url}}" alt="{{phone.name}}"/>
-					<select ng-model="phone.status"
+					 	<select ng-model="phone.status"
 							ng-change="update(phone)"
 							ng-options="phoneStatusOptions(status) for status in [true, false]"
-							ng-class="{'btn-success':phone.status, 'btn-warning': !phone.status}"></select>
+							ng-class="{'btn-success':phone.status, 'btn-warning': !phone.status}">
+						</select>
+						<img ng-src="{{phone.attachments[0].file.url}}" alt="{{phone.name}}"/>			
 					 </div>
 					<!--<div class="preview-img text-center">-->
 						<!--<img src="/assets/phones/dell-streak-7.0.jpg" alt="{{phone.name}}"/>-->
