Стили для корзины

--- a/app/assets/stylesheets/phones.scss
+++ b/app/assets/stylesheets/phones.scss
@@ -165,3 +165,13 @@ option:not(:checked) {
   background-color: white;
   color: black; 
 }
+.fa-shopping-cart{
+  color: grey; 
+}
+.shopping-cart{
+  float: right;
+  margin-top:10px;
+}
+.count{
+  font-size: 15px;
+}
