--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,12 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <li><a href="/contact">Contact</a></li>        
       </ul>
-    </div>
+      <div class="shopping-cart">
+        <i class="fa fa-shopping-cart fa-2x"> <span class="count">0</span></i>
+      </div>      
+    </div>   
   </div>
 </nav>
 
