--- a/public/templates/_form.html
+++ b/public/templates/_form.html
@@ -25,19 +25,39 @@
         <input type="checkbox" name="status" ng-model="phone.status" />
     </div>
 </div>
-<div class="form-group"> 
+<div class="form-group" ng-class="{'has-error' : submitted && phoneForm.phone.attachments[0].$invalid}">
 <!-- <div class="form-group" ng-class="{'has-error' : submitted && files.length}">  -->
     <label class="control-label col-md-3">Загрузите изображение <span class="required">* </span></label>
     <div class="col-md-3">
         <input type="file" nv-file-select uploader="uploader" multiple  /><br/>
     </div>
-   <!--  <p ng-show=" submitted && files.length" class="help-block">Загрузите изображение</p> -->
+    <p ng-show=" submitted && phoneForm.phone.attachments[0].$invalid" class="help-block">Данное поле обязательно для заполнения</p>
+    <!--  <p ng-show=" submitted && files.length" class="help-block">Загрузите изображение</p> -->
     <ul>
         <li ng-repeat="item in uploader.queue">
             Name: <span  ng-bind="item.file.name"></span><br/>
-            <button ng-click="item.upload()">upload</button>
+            <!--<button ng-click="item.upload()">upload</button>-->
         </li>
     </ul>
+
+    <!--<table class="table">-->
+        <!--<thead>-->
+        <!--<tr>-->
+            <!--<th width="50%">Name</th>-->
+            <!--<th ng-show="uploader.isHTML5">Size</th>-->
+            <!--<th>Actions</th>-->
+        <!--</tr>-->
+        <!--</thead>-->
+        <!--<tbody>-->
+        <!--<tr ng-repeat="item in uploader.queue">-->
+            <!--<td><strong>{{ item.file.name }}</strong></td>-->
+            <!--<td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>-->
+            <!--<td class="text-center">-->
+                <!--<span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>-->
+            <!--</td>-->
+        <!--</tr>-->
+        <!--</tbody>-->
+    <!--</table>-->
 
 <!--<button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">-->
     <!--<span class="glyphicon glyphicon-upload"></span> Upload-->
