--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -25,7 +25,7 @@
 						<h2>{{phone.name}}</h2>
 						<p>{{phone.description}}</p>					
 					<p><a class="btn btn-default" href="/phones/{{phone.id}}" role="button">View details &raquo;</a></p>
-					<a class="btn btn-sm btn-primary" ng-click="" ng-transclude="">
+					<a class="btn btn-sm btn-primary">
 						<span>Add To Cart</span>
 					</a>
 				</div>				
